--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;1,800&family=Racing+Sans+One&display=swap" rel="stylesheet" />
-    <title>Vite + React</title>
+    <title>todolist</title>
   </head>
   <body>
     <div id="root"></div>
